# agentic_rag

./: .env.example  README.md  pyproject.toml
app/: main.py
app/api/: api.py
app/api/endpoints/: agent_rag.py  upload.py
app/db/: mongodb_instance.py
app/schemas/: schemas.py
app/services/ingestion/: loader.py  singleton_wrapper.py  splitter.py  vectorstore.py
app/services/rag_agent/: agent_graph.py  chat_history.py  tools.py
app/utils/: crud.py  mongodb_message_builder.py  utils.py
